fixed overflow on navbar and in thirdSection, and other bug fixes

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -158,15 +158,16 @@
 
 .thirdSection {
     background-image: url('/images/pub2.jpg');
-    width: 100vw;
-    height: 400px;
+    /* width: 100vw; */
+    width: 100%;
+    height: 300px;
     background-size: cover;
     /* want background to fill the width of viewport by stretching */
     background-repeat: no-repeat;
     background-position: center;
     /* background-position-y: 80%; */
     /* background-position-y: bottom; */
-    background-position-x: 30%;
+    background-position-x: 75%;
 
     /* gives heroBG a simple parallax effect */
     background-attachment: fixed;
