--- a/src/app/styles/navbar.module.css
+++ b/src/app/styles/navbar.module.css
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+    padding: 0.5rem 2rem;
     background-color: var(--white);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100vw;
@@ -15,6 +15,7 @@
     backdrop-filter: blur(10px);
     max-width: 100%;
     height: 70px; /* assures navbar is always 70px across all devices/browsers (hero pic on home page depends on this value) */
+    /* overflow-y: hidden; */
 }
 
 .links {
@@ -25,7 +26,7 @@
 .avaLogo {
     /* width: 40px; */
     /* height: 29px; */
-    width: 50px;
+    width: 40px;
     height: auto; /* 50x37 */
 }
 
